fix: increase gap between socials icon for smaller screen

--- a/assets/global.css
+++ b/assets/global.css
@@ -451,5 +451,6 @@ ul {
   .socials {
     margin-top: 20px;
     align-items: center;
+    gap: 40px;
   }
 }
